# red_dot

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  dot_collection.cpp  dot_collection.hpp  linear_lerp.cpp  linear_lerp.hpp  main.cpp  main.hpp
src/: constants.hpp  dot_collection.cpp  dot_collection.hpp  linear_lerp.cpp  main.cpp  main.hpp
